--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="header">
         <a href="Portfolio.html" class="logo">My Portfolio</a>
       <div class="header-right">
-        <a class="active" href="Portfolio.html">Home</a>
+        <a class="active" href="index.html">Home</a>
         <a href="Contact.html">Contact</a>
         <a href="AboutMe.html">About me</a>
       </div>
