--- a/AboutMe.html
+++ b/AboutMe.html
@@ -12,7 +12,7 @@
 			<div class="header">
 				<a href="Portfolio.html" class="logo">My Portfolio</a>
 			<div class="header-right">
-				<a href="Portfolio.html">Home</a>
+				<a href="index.html">Home</a>
 				<a href="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Contact.html">Contact</a>
 				<a class="active" href="AboutMe.html">About me</a>
 			</div>
@@ -21,7 +21,7 @@
 				<div class="Titel">
            <h1>About me:</h1>
 					 <div class="hoofd">
-	 					<img src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Afbeeldingen\Florre.png" class="Florre">
+	 					<img src="Afbeeldingen\Florre.png" class="Florre">
 	 				</div>
        </div>
 			 <div class="vierkanten">
