--- a/AboutMe.html
+++ b/AboutMe.html
@@ -13,7 +13,7 @@
 				<a href="Portfolio.html" class="logo">My Portfolio</a>
 			<div class="header-right">
 				<a href="index.html">Home</a>
-				<a href="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Contact.html">Contact</a>
+				<a href="Contact.html">Contact</a>
 				<a class="active" href="AboutMe.html">About me</a>
 			</div>
 			</div>
