--- a/Contact.html
+++ b/Contact.html
@@ -11,9 +11,9 @@
 	  <body>
 		<div><p class="muisTracker"></p></div>
 			<div class="header">
-				<a href="Portfolio.html" class="logo">My Portfolio</a>
+				<a href="index.html" class="logo">My Portfolio</a>
 			<div class="header-right">
-				<a href="Portfolio.html">Home</a>
+				<a href="index.html">Home</a>
 				<a class="active" href="Contact.html">Contact</a>
 				<a href="AboutMe.html">About me</a>
 			</div>
