--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,7 +10,7 @@
 	</head>
 	  <body>
 			<div class="header">
-				<a href="Portfolio.html" class="logo">My Portfolio</a>
+				<a href="index.html" class="logo">My Portfolio</a>
 			<div class="header-right">
 				<a href="index.html">Home</a>
 				<a href="Contact.html">Contact</a>
