--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	  <body>
 			<div><p class="muisTracker"></p></div>
       <div class="header">
-        <a href="Portfolio.html" class="logo">My Portfolio</a>
+        <a href="index.html" class="logo">My Portfolio</a>
       <div class="header-right">
         <a class="active" href="index.html">Home</a>
         <a href="Contact.html">Contact</a>
@@ -29,32 +29,32 @@
       <div class="slideshow-kader">
           <div class="mijnSlides fade">
             <div class="nummer">1 / 6</div>
-              <img src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Afbeeldingen\Desert Comp 1.jpg">
+              <img src="Afbeeldingen\Desert Comp 1.jpg">
             <div class="tekst">Desert Landscape</div>
           </div>
           <div class="mijnSlides fade">
             <div class="nummer">2 / 6</div>
-              <img src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Afbeeldingen\Mountain Comp 1.jpg">
+              <img src="Afbeeldingen\Mountain Comp 1.jpg">
             <div class="tekst">Mountain Landscape </div>
           </div>
           <div class="mijnSlides fade">
             <div class="nummer">3 / 6</div>
-              <img src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Afbeeldingen\Plain Comp 1.jpg">
+              <img src="Afbeeldingen\Plain Comp 1.jpg">
             <div class="tekst">Plaines Landscape</div>
           </div>
           <div class="mijnSlides fade">
             <div class="nummer">4 / 6</div>
-              <img src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Afbeeldingen\Polar bear silhouette.jpg">
+              <img src="Afbeeldingen\Polar bear silhouette.jpg">
             <div class="tekst">Polar Landscape </div>
           </div>
           <div class="mijnSlides fade">
             <div class="nummer">5 / 6</div>
-              <img src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Afbeeldingen\Swamp 1.jpg">
+              <img src="Afbeeldingen\Swamp 1.jpg">
             <div class="tekst">Swamp Landscape </div>
           </div>
           <div class="mijnSlides fade">
             <div class="nummer">6 / 6</div>
-              <img src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Afbeeldingen\Rolling hands.jpg">
+              <img src="Afbeeldingen\Rolling hands.jpg">
             <div class="tekst">Stoner Art </div>
           </div>
 <!-- Navigatie -->
@@ -72,42 +72,42 @@
           <div class="mijnSlides2 fade">
             <div class="nummer">1 / 6</div>
               <video width="40%" controls autoplay>
-                <source src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Animaties\Psychedelic Animation.mp4" type="video/mp4">
+                <source src="Psychedelic Animation.mp4" type="video/mp4">
               </video>
             <div class="tekst"> Psychedelic animation </div>
           </div>
           <div class="mijnSlides2 fade">
             <div class="nummer">2 / 6</div>
               <video width="100%" controls autoplay>
-                <source src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Animaties\3.Masks_NiemansF.mp4" type="video/mp4">
+                <source src="Animaties\3.Masks_NiemansF.mp4" type="video/mp4">
               </video>
             <div class="Working with masks"> </div>
           </div>
           <div class="mijnSlides2 fade">
             <div class="nummer">3 / 6</div>
             <video width="100%" controls autoplay>
-              <source src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Animaties\1819_SW2_NiemansF_Opdracht_8.mp4" type="video/mp4">
+              <source src="Animaties\1819_SW2_NiemansF_Opdracht_8.mp4" type="video/mp4">
             </video>
             <div class="tekst"> Walking Cycle</div>
           </div>
           <div class="mijnSlides2 fade">
             <div class="nummer">4 / 6</div>
             <video width="80%" controls autoplay>
-              <source src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Animaties\1819_SW2_NiemansF_Opdracht5_Oef9.mp4" type="video/mp4">
+              <source src="Animaties\1819_SW2_NiemansF_Opdracht5_Oef9.mp4" type="video/mp4">
             </video>
             <div class="tekst"> Mr Wiggly </div>
           </div>
           <div class="mijnSlides2 fade">
             <div class="nummer">5 / 6</div>
             <video width="100%" controls autoplay>
-              <source src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Animaties\Logo animation WATERDICHT.mp4" type="video/mp4">
+              <source src="D:Animaties\Logo animation WATERDICHT.mp4" type="video/mp4">
             </video>
             <div class="tekst"> Logo Animation </div>
           </div>
           <div class="mijnSlides2 fade">
             <div class="nummer">6 / 6</div>
             <video width="100%" controls autoplay>
-              <source src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Animaties\Video WATERDICHT_3.mp4" type="video/mp4">
+              <source src="Animaties\Video WATERDICHT_3.mp4" type="video/mp4">
             </video>
             <div class="tekst"> "WATERDICHT" video </div>
           </div>
@@ -121,10 +121,10 @@
 				<h2> Logo designs: </h2>
 
 				<div class="logokader">
-					<div class="een" ><img class="Logoimg" src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Afbeeldingen\Artboard 2.png" alt="Design Aholic Logo"></div>
-					<div class="twee"><img class="logoimg" src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Afbeeldingen\Druppel 2.0.png" alt="Waterdicht Icon"></div>
-					<div class="drie"><img class="Logoimg" src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Afbeeldingen\Logo 2.png" alt="WATERDICHT logo"></div>
-					<div class="vier"><img class="Logoimg" src="D:\School\GDM\Tweede jaar\IT2\Portfolio website\Afbeeldingen\Square Graphics.jpg" alt="Square Graphics"></div>
+					<div class="een" ><img class="Logoimg" src="Afbeeldingen\Artboard 2.png" alt="Design Aholic Logo"></div>
+					<div class="twee"><img class="logoimg" src="Afbeeldingen\Druppel 2.0.png" alt="Waterdicht Icon"></div>
+					<div class="drie"><img class="Logoimg" src="Afbeeldingen\Logo 2.png" alt="WATERDICHT logo"></div>
+					<div class="vier"><img class="Logoimg" src="Afbeeldingen\Square Graphics.jpg" alt="Square Graphics"></div>
 					<div class="vijf"><img class="Logoimg" src="" alt=""></div>
 				</div>
 
