--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
           <div class="mijnSlides2 fade">
             <div class="nummer">1 / 6</div>
               <video width="40%" controls autoplay>
-                <source src="Psychedelic Animation.mp4" type="video/mp4">
+                <source src="Animaties\Video WATERDICHT_3.mp4" type="video/mp4">
               </video>
-            <div class="tekst"> Psychedelic animation </div>
+            <div class="tekst"> Video Waterdicht </div>
           </div>
           <div class="mijnSlides2 fade">
             <div class="nummer">2 / 6</div>
@@ -107,9 +107,9 @@
           <div class="mijnSlides2 fade">
             <div class="nummer">6 / 6</div>
             <video width="100%" controls autoplay>
-              <source src="Animaties\Video WATERDICHT_3.mp4" type="video/mp4">
+              <source src="" type="video/mp4">
             </video>
-            <div class="tekst"> "WATERDICHT" video </div>
+            <div class="tekst"> </div>
           </div>
           <a class="prev" onclick="volgendeSlide(-1,1)"> < </a>
           <a class="next" onclick="volgendeSlide(1,1)"> > </a>
