--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="slideshow-kader">
           <div class="mijnSlides2 fade">
             <div class="nummer">1 / 6</div>
-              <video width="40%" controls autoplay>
+              <video width="40%" controls>
                 <source src="Animaties\Video WATERDICHT_3.mp4" type="video/mp4">
               </video>
             <div class="tekst"> Video Waterdicht </div>
