--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <a class="next" onclick="volgendeSlide(1,0)"> > </a>
         </div>
 
-				<h3> I love making illustrations using adobe illustrator. I mostly create landscapes for pc backgrounds or poster designs but I can do almost anything in illustrator. Illustrator is my go to designing program, what can I say I realy fell in love with vectors. They keep all of your designs tight and clean, unlike pixels.  </h3>
+				<h3> I love making illustrations using adobe illustrator. I mostly create landscapes for pc backgrounds or poster designs but I can do almost anything in illustrator. Illustrator is my go to designing program, what can I say I really fell in love with vectors. They keep all of your designs tight and clean, unlike pixels.  </h3>
 
 <!-- slide-show 2 -->
       <div class="tussenTitel">
@@ -100,7 +100,7 @@
           <div class="mijnSlides2 fade">
             <div class="nummer">5 / 6</div>
             <video width="100%" controls autoplay>
-              <source src="D:Animaties\Logo animation WATERDICHT.mp4" type="video/mp4">
+              <source src="Animaties\Logo animation WATERDICHT.mp4" type="video/mp4">
             </video>
             <div class="tekst"> Logo Animation </div>
           </div>
