--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
           </div>
           <div class="mijnSlides2 fade">
             <div class="nummer">6 / 6</div>
-            <video width="100%" controls autoplay>
-              <source src="" type="video/mp4">
+            <video width="100%" controls>
+              <source src="Animaties\Lyric Video_4.mp4" type="video/mp4">
             </video>
             <div class="tekst"> </div>
           </div>
